--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -21,6 +21,7 @@ $purple: #812CE5;
 $light_white: #e2e2e2;
 $mid_gray: #979797;
 
+$banner_height: 40px;
 $desktop_header_height: 90px;
 $mobile_header_height: 68px;
 $desktop_footer_height: 471px;
